style.css
@import url('https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Inter:wght@100..900&family=Roboto+Slab:wght@100..900&family=Rubik+Mono+One&display=swap');

*{
    margin:0;
    padding:0;
    text-decoration: none;
    font-family: var(--primary-font);
}

:root{
    --primary-color:#fabb00;
    --secondary-color:#fade69;
    --tertiary-color:whitesmoke;
    --quarternary-color: rgb(31, 52, 52);
    --quinary-color: rgb(187,192,192);

    --primary-font:verdana;
    --logo-font:'Roboto Slab', monospace;
}
body{
    background-color: var(--tertiary-color);
    min-height: 100vh;
    display: flex;
    flex-direction: column;
}
header{
    background-color: var(--tertiary-color);
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    position: fixed;
    width: 100%;
    margin-top: 15px;
    box-shadow: 0px 0px 20px 0px var(--quarternary-color);
}
.container-texto-logo-sorriziho-para-voces{
    display: flex;
    align-items: center;
    padding: 10px 20px;
    margin-right:5px;
    background-color: var(--primary-color);
}
.container-texto-logo-sorriziho-para-voces:hover, .container-texto-logo-sorriziho-para-voces:focus{
    text-decoration: none;
}
.container-texto-logo-sorriziho-para-voces h2{
    font-family: var(--logo-font);
    font-weight: 600;
    color:var(--quarternary-color);
}
header nav{
    padding-right: 50px;
    display: flex;
    align-items: center;
}
header nav a{
    border-left: var(--quinary-color) 1px solid;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 0 7px;
}
header nav a:last-child{
    border-right: var(--quinary-color) 1px solid;
}
header a:hover:not(.container-texto-logo-sorriziho-para-voces), header a:focus:not(.container-texto-logo-sorriziho-para-voces){
    background-color: var(--quinary-color);
}
a{
    color:var(--quarternary-color);
    text-decoration: none;
    font-weight: 600;
}
a:hover, a:focus{
    text-decoration: underline;
}
input[type="checkbox"]{
    display: none;
}
.hamburger{
    display:none;
    font-size:30px;
    user-select: none;
    font-style:normal;
    transition: rotate 1.5s ease;
    justify-content: center;
    align-items: center;
    padding-right: 25px;
}

@media (max-width:983px){
    .hamburger{
        display: flex;
    }
    header nav{
        position: absolute;
        background-color: var(--tertiary-color);
        flex-direction: column;
        padding:0;
        border:1px solid var(--quinary-color);
        right:0;
        top:80%;
        overflow: hidden;
        transform: translateX(100%);
        transition: transform 0.25s ease-out;
        border-top-left-radius: 20px;
        border-bottom-left-radius: 20px;
        box-shadow: 0px 0px 20px -8px var(--quarternary-color);
    }
    header:has(input:checked) nav{
        transform: translateX(0%);
    }
    header nav a{
        width: 88%;
        border:none;
        padding:0;
        padding: 25px 12.5px;
    }
    header nav a + a{
        border:none;
        border-top:1px solid var(--quinary-color)
    }
    .hamburger{
        transition: rotate 0.25s ease-out;
        transform-origin: 25% 50%;
    }
    .hamburger p{
        transition: opacity 0.25s linear;
        font-family: monospace;
    }
    .hamburger p:last-child{
        position: absolute;
        opacity: 0;
    }
    header:has(input:checked) .hamburger p:first-child{
       opacity: 0;
    }
    header:has(input:checked) .hamburger p:last-child{
       opacity: 1;
    }
    header:has(input:checked) .hamburger{
        rotate:360deg;
     }
    #atuacao{
        border:none;
        border-top:1px solid var(--quinary-color)
    }
}

footer{
    margin-top:auto;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--tertiary-color);
    box-shadow: 0px 0px 20px 0px var(--quarternary-color);
    text-align: center;
}
footer a{
    font-weight: 300;
}
.text-container{
    padding: 10px 0;
}
main{
    padding-top:127.4px;
}
.carousell{
    aspect-ratio: 4.5/1;
    background-color: var(--quinary-color);
    display: flex;
    flex-direction: row;
    overflow: hidden;
    min-height: 295px;
    max-width: 100vw;
    position: relative;
    z-index: -1;
}
.carousell-element{
    min-width: 100vw;
    max-width: 100vw;
    min-height: 100%;
    max-height: 100%;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}
.carousell-element img{
    min-height: 100%;
    min-width: 100%;
}
.carousell-element:first-child{
    animation: carousell-scroll 15s ease-in-out infinite;
}
@keyframes carousell-scroll {
    0%{margin-left:0vw}
    18%{margin-left:0vw}
    20%{margin-left:-100vw}
    38%{margin-left:-100vw}
    40%{margin-left:-200vw}
    58%{margin-left:-200vw}
    60%{margin-left:-300vw}
    78%{margin-left:-300vw}
    80%{margin-left:-400vw}
    99.9999%{margin-left:-400vw}
    100%{margin-left:0vw}
}
.carousell-overlay{
    content: '';
    position: absolute;
    aspect-ratio: 4.5/1;
    min-height: 295px;
    max-width: 100vw;
    box-shadow: 0px 0px 100px -8px black inset;
    display: flex;
    justify-content: space-between;
}
.carousell-overlay button{
    opacity: 0;
    font-size: 3rem;
    font-weight: 600;
    font-family: var(--logo-font);
    color: var(--tertiary-color);
    appearance: none;
    border: 0;
    background: transparent;
    margin: 0 20px;
    transition: opacity 0.25s ease-in;
}
.carousell-overlay button:hover,
.carousell-overlay button:focus,
.carousell-overlay:hover button,
.carousell-overlay:has(button:active) button{
    opacity: 1;
}
@media (max-width:983px){
    .carousell-overlay button{
        opacity: 0.5;
    }
}

